# orbit-browser

./: .gitignore  AGENTS.md  CHANGELOG.md  CODEX_BUILD_PROMPT.md  LICENSE  PROJECT_BRIEF.md  README.md  TODO.md  index.html  package-lock.json  package.json  vite.config.js
.cursor/rules/: android-compose-apps.mdc  audits.mdc  macos-menu-bar-apps.mdc  swiftui-6-apps.mdc  tauri-2-rust-backend.mdc
.github/: AGENTS.md
.github/workflows/: ci.yml
docs/: 2026-05-Major-Update.md  AGENTS.md  README.md
docs/design/: 2026-05-29-orbit-ui-ux-polish-approved.md
docs/internal/: AGENTS.md  AUDIT.md  AUDIT_PROMPTS.md  HERMES_HANDOFF.md  README.md
docs/plans/: 2026-03-15-orbit-browser-design.md  2026-03-15-orbit-browser-implementation.md
prompts/: dox-audit.md  release-check.md  repo-orientation.md
resources/: adblock-patterns.json
scripts/: AGENTS.md  build-mac.sh  install-app.sh  premium-visual-qa.mjs  premium-visual-qa.sh  smoke-runtime.sh  smoke-test.sh
src/: AGENTS.md  events.js  find.js  main.js  shortcuts.js  styles.css  zoom.js
src-tauri/: AGENTS.md  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: main.json
src-tauri/icons/: icon.icns
src-tauri/src/: AGENTS.md  adblock.rs  browser.rs  db.rs  download.rs  layout.rs  main.rs  tabs.rs
src/styles/: AGENTS.md  base.css  chrome.css  home.css  panels.css
src/utils/: AGENTS.md  dom.js  modal.js  render.js  toast.js  ui.js
tests/: AGENTS.md
tests/e2e/: app.spec.ts
tests/unit/: dom-shim.js  dom.test.js  events.test.js  find.test.js  main.test.js  render.test.js  toast.test.js  ui.test.js
(+1 files in other folders)
