[package]
name = "orbit"
version = "1.0.4"
description = "Orbit Browser"
authors = []
edition = "2021"
rust-version = "1.75"

[build-dependencies]
tauri-build = { version = "=2.5.6", features = [] }

[dependencies]
# Tauri's unstable feature is required for native child webviews.
# Pin exact Tauri crates while those APIs are unstable; remove the feature
# when stable child webview APIs cover Orbit's tab model.
tauri = { version = "=2.10.3", features = ["unstable"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4"] }
url = "2"
rusqlite = { version = "0.31", features = ["bundled"] }
urlencoding = "2"
reqwest = { version = "0.12", features = ["rustls-tls"], default-features = false }
